[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stable_inference"
version = "0.0.6"
authors = [
    { name="Jimmy", email="goto@github.com" },
]
description = "A clean, efficient stable diffusion inference engine"
readme = "README.md"
license = { file="LICENSE" }
dynamic = ["dependencies"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AmericanPresidentJimmyCarter/stable-diffusion"
"Bug Tracker" = "https://github.com/AmericanPresidentJimmyCarter/stable-diffusion/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
